--- a/style.css
+++ b/style.css
@@ -55,6 +55,29 @@ a:hover {
 .bloc-sm {
     padding: 20px 50px;
 }
+/* modification css*/
+
+#presentation{
+    font-size: 27px;
+}
+.text-center{
+    font-size: 16px;
+}
+blockquote{
+    font-size: 20px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    border: 0px;
+}
+#quote_author{
+    font-size: 14px;
+}
+#testimony{
+    font-size: 26px;
+}
+.wish{
+    font-size: 20px;
+}
 
 .bg-center,
 .bg-l-edge,
